--- a/src/App.scss
+++ b/src/App.scss
@@ -10,35 +10,58 @@ li {
     list-style: none;
 }
 
+$light_purple : #E3E9FF;
+$deep_purple : #AF7EEB;
 
+@mixin img24 {
+    width: 24px;
+    height: 24px;
+};
 
 .todo_wrap {
     width: 500px;
-    background-color: #3A3F49;
     position: absolute;
     top: 10%;
     left: 35%;
-    border-radius: 5px;
-    padding: 10px 15px 10px;
+    
+    h2 {
+        background-color: $deep_purple;
+        color: #fff;
+        text-align: center;
+        padding: 10px 0;
+        margin-bottom: 30px;
+    }
 }
 
 .top {
-    color: white;
-    padding: 20px 10px;
+    background-color:#fff;
 
     p {
         padding-top: 10px;
+        color: #3A3F49;
     }
 }
 
 /* list */
 .lists_wrap {
-    padding: 20px 0 10px 10px;
+    padding: 20px 0 10px 30px;
 }
 
 .lists {
     width: 100%;
     position: relative;
+
+    input[type="checkbox"] {
+        appearance: none;
+        width: 10px;
+        height: 10px;
+        border: 1px solid #3A3F49;
+        border-radius: 50%;
+    }
+    input[type="checkbox"]:checked {
+        border: none;
+        background-color: $deep_purple;
+    }
 }
 
 .todo {
@@ -49,46 +72,45 @@ li {
 
 .list_btns {
     position: absolute;
-    right: 0;
+    top: 8px;
+    right: 25px;
     display: inline-block;
 
     img {
         cursor: pointer;
+        @include img24();
     }
 
     span:last-child img {
         margin-left: 13px;
-        width: 30px;
+        @include img24();
     }
 
 }
 
 @mixin inputStyle {
     width: 350px;
-        padding: 10px;
-        outline: none;
-        border-radius: 5px;
+    padding: 10px;
+    outline: none;
 }
 
 /* create */
 .create_wrap {
     width: 100%;
-    background-color: #3A3F49;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 25px 0 10px;
+    padding: 30px 0 30px 20px;
 
     input {
-        @include inputStyle()
+        @include inputStyle();
     }
 }
 
 .addBtn {
     padding: 8px;
-    background-color: #5FD7F6;
+    background-color: $deep_purple;
     color: #fff;
-    border-radius: 5px;
     text-align: center;
     cursor: pointer;
 }
@@ -106,15 +128,16 @@ li {
 .edit_btns {
     position: absolute;
     top: 5px;
-    right: 0;
+    right: 25px;
     display: inline-block;
 
     img {
-        width: 25px;
+        @include img24();
         cursor: pointer;
     }
 
     span:last-child img {
+        @include img24();
         margin-left: 15px;
     }
 }
